--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -8,7 +8,22 @@
       <span class="breadcrumb-current"></span>
     </div>
 
-    <ul class="exercises-categories"></ul>
+    <div class="filter-search-wrapper">
+      <form class="form-search hide-show-transition hide" id="search-form">
+        <label class="search-label" for="exercises-filter"></label>
+        <input
+          type="text"
+          class="search-input hide"
+          id="exercises-filter"
+          placeholder="Search exercises..."
+        />
+        <button class="clear-search" type="button" aria-label="Clear search">
+          ×
+        </button>
+      </form>
+
+      <ul class="exercises-categories"></ul>
+    </div>
   </div>
 
   <div class="exercises-container">
