--- a/src/css/exercises.css
+++ b/src/css/exercises.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: end;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 .filter-search-wrapper {
@@ -17,7 +18,9 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 12px;
+  gap: 20px;
+  width: 100%;
+  justify-content: space-between;
 }
 .form-search {
   position: relative;
@@ -25,22 +28,25 @@
   display: flex;
   align-items: center;
   justify-content: stretch;
-  padding-right: 30px;
+  /*padding-right: 30px;*/
 }
 .search-input {
-  padding-right: 30px;
-
+  padding: 0 35px 0 16px;
   min-width: 300px;
   width: 100%;
   height: 44px;
-  padding: 0 16px;
   border-radius: 30px;
-  background-color: var(--white);
+  background-color: transparent;
   border: 1px solid rgba(36, 36, 36, 0.5);
   font-size: 16px;
   line-height: 24px;
-  color: var(--black);
   outline: none;
+}
+
+.icon-search {
+  position: absolute;
+  right: 10px;
+  z-index: 1;
 }
 
 .clear-search {
@@ -64,8 +70,8 @@
   box-shadow: 0px 0px 0px 2px rgba(36, 36, 36, 0.1);
 }
 .exercises-title {
-  font-size: 44px;
-  line-height: 48px;
+  font-size: 28px;
+  line-height: 38px;
   color: var(--primary);
   letter-spacing: -0.88px;
 }
@@ -215,8 +221,15 @@
     gap: 16px;
   }
   .search-input {
-    min-width: 335px;
-    padding: 0 16px;
+    /*min-width: 335px;*/
+    /*padding: 0 16px;*/
+  }
+  .form-search {
+    flex: 0;
+  }
+  .exercises-title {
+    font-size: 44px;
+    line-height: 48px;
   }
 }
 
@@ -375,6 +388,9 @@
     display: block;
     overflow: visible;
   }
+  .filter-search-wrapper {
+    justify-content: flex-end;
+  }
 }
 
 @media screen and (max-width: 1440px) {
@@ -401,7 +417,6 @@
   }
 
   .exercises-header {
-    gap: 20px;
     align-items: start;
     flex-direction: column;
   }
